--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-ui-router": "^0.2.15"
+    "parallax-scrolling": "^0.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.8"
