--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.5.8",
-    "parallax-scrolling": "^0.0.2",
+    "angular-parallax-scrolling": "^0.0.1",
     "angular-ui-router": "^0.3.1"
   },
   "devDependencies": {
